[FIX] Try to fix threshold computation